--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     </article>
     <article>
-      <h2>Es lo que usa el Sr. Koala en los examenes</h2>
+      <h2>Es lo que usa el Sr. juan carlos</h2>
       <div><input type="radio" name="p10" value="a"> <span>Vinagre</span> </div>
       <div><input type="radio" name="p10" value="b"> <span>Vaselina</span> </div>
       <div><input type="radio" name="p10" value="c"> <span>Mayonesa</span> </div>
